[gd_scene load_steps=30 format=2]

[ext_resource path="res://assets/players/andy/chopstick.png" type="Texture" id=1]
[ext_resource path="res://assets/GlacialIndifference-Italic.otf" type="DynamicFontData" id=2]
[ext_resource path="res://animations/andy_attack.tres" type="Animation" id=3]
[ext_resource path="res://animations/andy_stab.tres" type="Animation" id=4]
[ext_resource path="res://animations/jump.tres" type="Animation" id=5]
[ext_resource path="res://animations/idle.tres" type="Animation" id=6]
[ext_resource path="res://animations/run.tres" type="Animation" id=7]
[ext_resource path="res://animations/fall.tres" type="Animation" id=8]
[ext_resource path="res://scripts/body.gd" type="Script" id=9]
[ext_resource path="res://assets/players/hand.png" type="Texture" id=10]
[ext_resource path="res://scenes/bars.tscn" type="PackedScene" id=11]
[ext_resource path="res://assets/leg.png" type="Texture" id=12]
[ext_resource path="res://assets/players/andy/body.png" type="Texture" id=13]
[ext_resource path="res://assets/players/andy/head.png" type="Texture" id=14]
[ext_resource path="res://assets/Fire Particle.png" type="Texture" id=15]
[ext_resource path="res://assets/players/andy/candle.png" type="Texture" id=16]
[ext_resource path="res://assets/players/andy/eyes.png" type="Texture" id=17]
[ext_resource path="res://scenes/fireball.tscn" type="PackedScene" id=18]
[ext_resource path="res://animations/andy_ult.tres" type="Animation" id=19]
[ext_resource path="res://scripts/andy.gd" type="Script" id=20]
[ext_resource path="res://scenes/andys_ult.tscn" type="PackedScene" id=21]
[ext_resource path="res://animations/die.tres" type="Animation" id=22]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 5.11761, 10.6686 )

[sub_resource type="CanvasItemMaterial" id=2]
blend_mode = 1

[sub_resource type="Curve" id=3]
min_value = 0.2
_data = [ Vector2( 0, 1 ), 0.0, 0.0, 0, 0, Vector2( 0.344828, 0.471402 ), -0.669031, -0.669031, 0, 0, Vector2( 0.396552, 0.274475 ), 0.0, 0.0, 0, 0 ]

[sub_resource type="RectangleShape2D" id=4]
extents = Vector2( 20, 42 )

[sub_resource type="DynamicFont" id=5]
size = 18
use_mipmaps = true
use_filter = true
font_data = ExtResource( 2 )

[sub_resource type="Animation" id=6]
resource_name = "fire"
length = 0.2
tracks/0/type = "value"
tracks/0/path = NodePath("KinematicBody2D/Sprite/handR:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 23.9718, -2.01741 ), Vector2( 34.9303, 21.8647 ), Vector2( 31.5294, 10.0748 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("KinematicBody2D/Sprite/handR:rotation_degrees")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.1, 0.2 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ -28.7981, 86.9086, 32.376 ]
}

[sub_resource type="Animation" id=7]
resource_name = "gun"
length = 0.1
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("KinematicBody2D/Sprite/handR:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 31.5294, 10.0748 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("KinematicBody2D/Sprite/handR:rotation_degrees")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 32.376 ]
}

[node name="andy" type="Node2D"]
script = ExtResource( 20 )
Ult = ExtResource( 21 )
Fireball = ExtResource( 18 )

[node name="KinematicBody2D" type="KinematicBody2D" parent="." groups=[
"player",
]]
scale = Vector2( 0.9, 0.9 )
script = ExtResource( 9 )
Bars = ExtResource( 11 )

[node name="Sprite" type="Sprite" parent="KinematicBody2D"]

[node name="body" type="Sprite" parent="KinematicBody2D/Sprite"]
position = Vector2( 0.464579, 4.8883 )
texture = ExtResource( 13 )

[node name="head" type="Sprite" parent="KinematicBody2D/Sprite"]
position = Vector2( -0.412223, -24.6726 )
z_index = 1
texture = ExtResource( 14 )

[node name="eyes" type="Sprite" parent="KinematicBody2D/Sprite/head"]
visible = false
texture = ExtResource( 17 )

[node name="handL" type="Sprite" parent="KinematicBody2D/Sprite"]
self_modulate = Color( 0.784314, 0.654902, 0.364706, 1 )
position = Vector2( -18.7074, 9.20673 )
scale = Vector2( 0.5, 0.5 )
z_index = 2
texture = ExtResource( 10 )

[node name="handR" type="Sprite" parent="KinematicBody2D/Sprite"]
self_modulate = Color( 0.784314, 0.654902, 0.364706, 1 )
position = Vector2( 21.3266, 9.69692 )
scale = Vector2( 0.5, 0.5 )
z_index = -3
texture = ExtResource( 10 )

[node name="weapon" type="Area2D" parent="KinematicBody2D/Sprite/handR"]
show_behind_parent = true
position = Vector2( -38.1904, -22.7409 )
scale = Vector2( 2.22222, 2.22222 )

[node name="Sprite" type="Sprite" parent="KinematicBody2D/Sprite/handR/weapon"]
self_modulate = Color( 0, 0, 0, 1 )
show_behind_parent = true
position = Vector2( 21.2952, 8.38509 )
rotation = 0.436877
scale = Vector2( 0.5, 0.5 )
texture = ExtResource( 1 )
offset = Vector2( 2.78225, -22.2975 )

[node name="Sprite2" type="Sprite" parent="KinematicBody2D/Sprite/handR/weapon"]
self_modulate = Color( 0, 0, 0, 1 )
show_behind_parent = true
position = Vector2( 18.0439, 6.74741 )
rotation = 0.562132
scale = Vector2( 0.5, 0.5 )
texture = ExtResource( 1 )
offset = Vector2( 2.78225, -22.2975 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="KinematicBody2D/Sprite/handR/weapon"]
visible = false
position = Vector2( 25.7624, -3.81464 )
rotation = 0.535449
shape = SubResource( 1 )

[node name="legL" type="Sprite" parent="KinematicBody2D/Sprite"]
self_modulate = Color( 0.376471, 0.0313726, 0.0313726, 1 )
position = Vector2( -8.19322, 23.9495 )
rotation = 0.0724322
z_index = -1
texture = ExtResource( 12 )

[node name="legR" type="Sprite" parent="KinematicBody2D/Sprite"]
self_modulate = Color( 0.376471, 0.0313726, 0.0313726, 1 )
position = Vector2( 7.0291, 24.3478 )
rotation = -0.113724
z_index = -2
texture = ExtResource( 12 )

[node name="gun" type="Sprite" parent="KinematicBody2D/Sprite"]
visible = false
show_behind_parent = true
position = Vector2( 21.1924, 9.76068 )
rotation = 0.741063
scale = Vector2( 0.7, 0.7 )
texture = ExtResource( 16 )
offset = Vector2( -0.807877, -12.2758 )

[node name="flame" type="CPUParticles2D" parent="KinematicBody2D/Sprite/gun"]
show_behind_parent = true
material = SubResource( 2 )
position = Vector2( 21.1331, -42.6466 )
scale = Vector2( 0.5, 1 )
amount = 10
lifetime = 0.15
texture = ExtResource( 15 )
emission_shape = 1
emission_sphere_radius = 1.0
direction = Vector2( 180, 0 )
spread = 180.0
gravity = Vector2( 0, -490 )
initial_velocity = 40.0
angle = 180.0
angle_random = 0.4
scale_amount_random = 0.4
scale_amount_curve = SubResource( 3 )
hue_variation = 0.1

[node name="flame2" type="CPUParticles2D" parent="KinematicBody2D/Sprite/gun"]
show_behind_parent = true
material = SubResource( 2 )
position = Vector2( 14.498, -41.0744 )
scale = Vector2( 0.5, 1 )
amount = 10
lifetime = 0.15
texture = ExtResource( 15 )
emission_shape = 1
emission_sphere_radius = 1.0
direction = Vector2( 180, 0 )
spread = 180.0
gravity = Vector2( 0, -490 )
initial_velocity = 40.0
angle = 180.0
angle_random = 0.4
scale_amount_random = 0.4
scale_amount_curve = SubResource( 3 )
hue_variation = 0.1

[node name="flame3" type="CPUParticles2D" parent="KinematicBody2D/Sprite/gun"]
show_behind_parent = true
material = SubResource( 2 )
position = Vector2( 7.99826, -41.0275 )
scale = Vector2( 0.5, 1 )
amount = 10
lifetime = 0.15
texture = ExtResource( 15 )
emission_shape = 1
emission_sphere_radius = 1.0
direction = Vector2( 180, 0 )
spread = 180.0
gravity = Vector2( 0, -490 )
initial_velocity = 40.0
angle = 180.0
angle_random = 0.4
scale_amount_random = 0.4
scale_amount_curve = SubResource( 3 )
hue_variation = 0.1

[node name="flame4" type="CPUParticles2D" parent="KinematicBody2D/Sprite/gun"]
show_behind_parent = true
material = SubResource( 2 )
position = Vector2( 0.371376, -41.1967 )
scale = Vector2( 0.5, 1 )
amount = 10
lifetime = 0.15
texture = ExtResource( 15 )
emission_shape = 1
emission_sphere_radius = 1.0
direction = Vector2( 180, 0 )
spread = 180.0
gravity = Vector2( 0, -490 )
initial_velocity = 40.0
angle = 180.0
angle_random = 0.4
scale_amount_random = 0.4
scale_amount_curve = SubResource( 3 )
hue_variation = 0.1

[node name="flame5" type="CPUParticles2D" parent="KinematicBody2D/Sprite/gun"]
show_behind_parent = true
material = SubResource( 2 )
position = Vector2( -6.85721, -41.548 )
scale = Vector2( 0.5, 1 )
amount = 10
lifetime = 0.15
texture = ExtResource( 15 )
emission_shape = 1
emission_sphere_radius = 1.0
direction = Vector2( 180, 0 )
spread = 180.0
gravity = Vector2( 0, -490 )
initial_velocity = 40.0
angle = 180.0
angle_random = 0.4
scale_amount_random = 0.4
scale_amount_curve = SubResource( 3 )
hue_variation = 0.1

[node name="flame6" type="CPUParticles2D" parent="KinematicBody2D/Sprite/gun"]
show_behind_parent = true
material = SubResource( 2 )
position = Vector2( -14.0858, -41.8994 )
scale = Vector2( 0.5, 1 )
amount = 10
lifetime = 0.15
texture = ExtResource( 15 )
emission_shape = 1
emission_sphere_radius = 1.0
direction = Vector2( 180, 0 )
spread = 180.0
gravity = Vector2( 0, -490 )
initial_velocity = 40.0
angle = 180.0
angle_random = 0.4
scale_amount_random = 0.4
scale_amount_curve = SubResource( 3 )
hue_variation = 0.1

[node name="flame7" type="CPUParticles2D" parent="KinematicBody2D/Sprite/gun"]
show_behind_parent = true
material = SubResource( 2 )
position = Vector2( -20.9838, -41.6704 )
scale = Vector2( 0.5, 1 )
amount = 10
lifetime = 0.15
texture = ExtResource( 15 )
emission_shape = 1
emission_sphere_radius = 1.0
direction = Vector2( 180, 0 )
spread = 180.0
gravity = Vector2( 0, -490 )
initial_velocity = 40.0
angle = 180.0
angle_random = 0.4
scale_amount_random = 0.4
scale_amount_curve = SubResource( 3 )
hue_variation = 0.1

[node name="Position2D" type="Position2D" parent="KinematicBody2D/Sprite/gun"]
position = Vector2( -0.460909, -41.2865 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="KinematicBody2D"]
position = Vector2( 1.2605, -6.96839 )
shape = SubResource( 4 )

[node name="Label" type="Label" parent="KinematicBody2D"]
margin_left = -101.071
margin_top = -75.234
margin_right = 98.9295
margin_bottom = -52.234
custom_fonts/font = SubResource( 5 )
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/fall = ExtResource( 8 )
anims/idle = ExtResource( 6 )
anims/jump = ExtResource( 5 )
anims/run = ExtResource( 7 )

[node name="AnimationPlayer2" type="AnimationPlayer" parent="."]
anims/attack = ExtResource( 3 )
anims/die = ExtResource( 22 )
anims/fire = SubResource( 6 )
anims/gun = SubResource( 7 )
anims/stab = ExtResource( 4 )
anims/ult = ExtResource( 19 )

[node name="ReloadTimer" type="Timer" parent="."]
wait_time = 2.5
one_shot = true

[node name="UltTimer" type="Timer" parent="."]
wait_time = 5.0
one_shot = true

[node name="DeathTimer" type="Timer" parent="."]
wait_time = 1.5
one_shot = true
[connection signal="body_entered" from="KinematicBody2D/Sprite/handR/weapon" to="KinematicBody2D" method="_on_weapon_body_entered"]
[connection signal="timeout" from="ReloadTimer" to="." method="_on_ReloadTimer_timeout"]
[connection signal="timeout" from="UltTimer" to="." method="_on_UltTimer_timeout"]
[connection signal="timeout" from="DeathTimer" to="." method="_on_DeathTimer_timeout"]
[connection signal="timeout" from="DeathTimer" to="KinematicBody2D" method="_on_DeathTimer_timeout"]
